<resources>
    <string name="app_name" translatable="false">CafeOrderApp</string>
    <string name="logo">Logo</string>
    <string name="welcome">Welcome!</string>
    <string name="hint_name">Enter your name</string>
    <string name="hint_password">Enter password</string>
    <string name="default_name">Client</string>
    <string name="default_password">password</string>
    <string name="btn_create_order">Create order</string>
    <string name="Toast_data">Please enter data</string>
    <string name="description_button_for_order">Button for order</string>
    <string name="tea">Tea</string>
    <string name="coffee">Coffee</string>
    <string name="check_box_sugar">Sugar</string>
    <string name="check_box_milk">Milk</string>
    <string name="checkbox_lemon">Lemon</string>
    <string name="btn_text_order">Order</string>
    <string name="choose_your_drink">Choose your drink</string>
    <string name="additions">What to add to your %s?</string>
    <string name="hello_client">Hello, %s! What do you want to order?</string>

<!--Strings for array coffee options-->
    <string name="americano">Americano</string>
    <string name="espresso">Espresso</string>
    <string name="cappuccino">Cappuccino</string>
    <string name="latte">Latte</string>
    <string name="macchiato">Macchiato</string>
    <string name="flat_white">Flat White</string>
    <string name="irish_coffee">Irish Coffee</string>
    <string name="turkish_coffee">Turkish Coffee</string>
    <string name="italian_coffee">Italian Coffee</string>



    <string-array name="options_of_coffee">
        <item>@string/americano</item>
        <item>@string/espresso</item>
        <item>@string/cappuccino</item>
        <item>@string/latte</item>
        <item>@string/macchiato</item>
        <item>@string/flat_white</item>
        <item>@string/irish_coffee</item>
        <item>@string/turkish_coffee</item>
        <item>@string/italian_coffee</item>
    </string-array>

<!--Strings for array tea-->
    <string name="black_tea">Black tea</string>
    <string name="green_tea">Green tea</string>
    <string name="oolong_tea">Oolong tea</string>
    <string name="pu_erh_tea">Pu-erh tea</string>
    <string name="white_tea">White tea</string>
    <string name="chamomile_tea">Chamomile Tea</string>
    <string name="matcha_tea">Matcha Tea</string>
    <string name="peppermint_tea">Peppermint Tea</string>
    <string name="rooibos_tea">Rooibos Tea</string>
    <string name="detail_client_name">Name: </string>
    <string name="detail_client_password">Password: </string>
    <string name="detail_drink">Drink: </string>
    <string name="detail_additions">Additions: </string>
    <string name="detail_type_of_drink">Type of Drink: </string>
    <string name="detail_order_id">Order id:</string>
    <string name="detail_order">Order</string>


    <string-array name="options_of_tea">
        <item>@string/black_tea</item>
        <item>@string/green_tea</item>
        <item>@string/oolong_tea</item>
        <item>@string/pu_erh_tea</item>
        <item>@string/white_tea</item>
        <item>@string/chamomile_tea</item>
        <item>@string/matcha_tea</item>
        <item>@string/peppermint_tea</item>
        <item>@string/rooibos_tea</item>
    </string-array>
</resources>